cmake_minimum_required (VERSION 3.8)
project (Vulkan CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(glfw3 REQUIRED)
find_package(Vulkan REQUIRED)
add_executable (main src/vulkan_demo/main.cpp)
target_link_libraries (main ${Vulkan_LIBRARIES} glfw)
